[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/log.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Resource.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 61, 82 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.32, 0.32 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="id" type="Label" parent="."]
margin_left = -20.0
margin_top = 89.0
margin_right = 20.0
margin_bottom = 103.0
align = 1

[connection signal="input_event" from="." to="." method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
